# mimo-capital-cryptio

./: .gcloudignore  main.py  mimo-capital-cryptio.code-workspace  pyproject.toml  test_main.py
.github/workflows/: cloud-functions.yaml  dataflow.yaml
dataflow/: .dockerignore  Dockerfile.container  Dockerfile.template  docker-compose.yml  main.py  metadata.json  pyproject.toml
dataflow/pipeline/: __init__.py  asset.py  interface.py  movement.py
dataflow/repository/: __init__.py
dataflow/secret_manager/: __init__.py
