[tool.poetry]
name = "mimo-capital-cryptio-dataflow"
version = "0.1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
apache-beam = {version = "2.41", extras = ["gcp"]}
google-cloud-secret-manager = "2.12.5"
httpx = "^0.23.3"
tenacity = "^8.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
